public/index.css
body {
  margin: 0px;
  font-family: "Lato", sans-serif;
  /* background-image: url(/media/Portfolio-background.jpg); */
  background-image: url(/media/background.jpg);
  background-position: center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  height: 100%;
  background-color: #464646;
}

